--- a/workspace/Porject2/.classpath
+++ b/workspace/Porject2/.classpath
@@ -7,6 +7,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/project2.lib"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/project lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
